#
# Change log of IntaRNA available at 
#
# https://github.com/BackofenLab/IntaRNA
#
################################################################################

development version

#######  new features #######

TODO: model=X = new default
TODO: IntaRNA1,2 personalities
TODO: docu exact acc and length restriction in exact mode

+ outNoLP
+ outCsvSort
+ output of all putative seeds (unless outMode=N or outBestSeedOnly)
+ personality
+ model=P
+ support for multi-precision Z (via GNU quadmath library) : configure
+ mode=S
+ energyNoDangles
+ parameterFile
+ seed-extension-based prediction
+ seedNoGU
+ seedMaxEhybrid
+ helixMinPu (replaces helixMaxED)
+ helixFullE : replaces helixNoED
+ model=B (replaces L)
* reporting best (mfe) seed per interaction
* outMode=C
  + sorting
  + columns Eall, Zall, P_E
  * marker "NAN" for not available values
* outMode=D
  * index ranges without whitespaces, i.e. "1--5" instead of "1 -- 5"
  + highlighting of all bps part of putative seeds
* E_type now int (was float)
- IntaRNA v1 output support not continued

###############################

190809 Martin Raden :
 * IntaRNA/general :
   * deleteOutStream() :
     * now reference to stream pointer to ensure update of original pointer
   * E_INF = INTMAX / 8 (to ensure correct boundary checks in predictors)
 * IntaRNA/OutputStreamHandlerSortedCsv :
   * destructor() :
     * BUGFIX: double deletion of outstream (fixes #157)
 * IntaRNA/PredictorMfe2dSeed :
   * traceback() :
     * BUGFIX noLP traceback (fixes #153)
 * IntaRNA/OutputHandlerText :
   * add():
     * non-existing positions in loops are now represented by '-' symbol (#155)

190808 Martin Raden :
 * renaming personality IntaRNAblock to IntaRNAhelix (since used in resp. paper)

190716 Martin Raden :
 * bin/CommandLineParsing :
   * IntaRNAexact :
     + model=X
     + exact accessibility computation (*AccW = *AccL = 0)

190716 Martin Raden :
 * IntaRNA/Accessibility :
   * decomposeByMaxED( ranges ) : 